<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invertir_orden"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <Spinner
            android:id="@+id/spnComuna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSpinner"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/tvFiltro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:hint="@string/filtro"
            android:inputType="textPersonName"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnComuna"
            app:layout_constraintVertical_bias="0.074" />

        <Button
            android:id="@+id/btnFiltrarTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtrar_texto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFiltro"
            app:layout_constraintVertical_bias="0.155" />

        <Button
            android:id="@+id/btnNombreCiclovia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtrar_nombre_ciclovia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.385"
            app:layout_constraintStart_toEndOf="@+id/btnFiltrarTexto"
            app:layout_constraintTop_toBottomOf="@+id/tvFiltro"
            app:layout_constraintVertical_bias="0.155" />

        <Button
            android:id="@+id/btnComuna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtrar_por_caracteres_de_comuna"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFiltrarTexto"
            app:layout_constraintVertical_bias="0.119" />

        <Button
            android:id="@+id/btnNumeroCiclovia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtrar_numero_ciclovia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.882"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNombreCiclovia"
            app:layout_constraintVertical_bias="0.119" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLista"
            android:layout_width="329dp"
            android:layout_height="191dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnComuna"
            app:layout_constraintVertical_bias="0.268" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>